# favor_GI5G

./: .gitignore  CMakeLists.txt  README.md  bad_debug_output.txt  favor.kdev4  fetch_dependencies.py  good_debug_output.txt  license.txt  licenser.py  valgrind_out.txt  valgrind_out_noerror.txt  vmime_debugging.gdb
.kdev4/: favor.kdev4
src/: CMakeLists.txt  accountmanager.cpp  accountmanager.h  address.h  contact.cpp  contact.h  conversation_data.h  datalock.h  definitions.h  exceptions.h  favor.cpp  favor.h  logger.cpp  logger.h  lvector.cpp  lvector.h  message.cpp  message.h  messagemanager.cpp  messagemanager.h  messagequery.h  processor.cpp  processor.h  reader.cpp  reader.h  types.h  worker.cpp  worker.h
src/jni/: Android.mk  Application.mk  android-build.sh  jni.cpp  jni_accountmanager.h  jni_exceptions.h  jni_globals.h  jni_processor.h  jni_reader.h  jni_string.h  jni_worker.h
src/lib/: fetch_dependencies.py
src/lib/sqlite/: VERSION
src/lib/vmime/: build_cmd
src/managers/: androidtextmanager.cpp  androidtextmanager.h  emailmanager.cpp  emailmanager.h  linemanager.cpp  linemanager.h  managers.h  skypemanager.cpp  skypemanager.h
src/messagequeries/: messagequery.cpp  messagequery.h
test/: CMakeLists.txt  accountmanager_tests.h  data_generator.py  favor_tests.h  main.cpp  misc_tests.h  processor_tests.h  reader_tests.h  test  testing.h  testing_definitions.h  worker_tests.h
test/managers/: emailmanager_tests.h  skype_testdata.h  skypemanager_tests.h  skypemanager_tests.h.h
test/managers/vmime_mocks/: mock_session.h
test/vmime_mocks/: mock_folder.h  mock_message.h  mock_session.h  mock_status.h  mock_store.h
